<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_checkBalance"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menu_checkBalance"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_checkInclusiveMinutes"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menu_checkInclusiveMinutes"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_addBalance"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_addBalance"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reloadPage"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/menu_reloadPage"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_aboutApp"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menu_aboutApp"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_closeApp"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/menu_closeApp"
        app:showAsAction="never" />
</menu>
